# QQMusicApi

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  cliff.toml  mkdocs.yml  prek.toml  pyproject.toml  zensical.toml
.agents/skills/pydantic/: SKILL.md
.agents/skills/python-standards/: SKILL.md
.agents/skills/tarsio/: SKILL.md
.agents/skills/tarsio/references/: api-reference.md
.agents/skills/uv-package-manager/: SKILL.md
.github/: renovate.json
.github/workflows/: changelog.yml  checking.yaml  docs.yml  pre-commit.yml  prek.yml  release.yml  testing.yml
docs/: coding.md  contributing.md  credential.md  index.md  logging.md  release-notes.md  session.md
docs/api/: album.md  comment.md  core.md  exceptions.md  login.md  lyric.md  model.md  modules.md  mv.md  search.md  singer.md  song.md  songlist.md  top.md  user.md
docs/api/algorithms/: sign.md  tripledes.md
docs/api/core/: client.md  request.md  versioning.md
docs/api/models/: credential.md
docs/examples/: login.md  search.md  user.md
docs/reference/: exceptions.md
docs/reference/core/: client.md  exception.md  pagination.md  request.md  versioning.md
docs/reference/model/: album.md  base.md  comment.md  helper.md  login.md  lyric.md  mv.md  private_message.md  recommend.md  request.md  search.md  singer.md  song.md  songlist.md  top.md  user.md
docs/reference/modules/: album.md  comment.md  helper.md  helper_utils.md  login.md  login_utils.md  lyric.md  mv.md  private_message.md  recommend.md  search.md  singer.md  song.md  songlist.md  top.md  user.md
docs/tutorial/: client.md  credential.md  download.md  error-handling.md  login.md  pagination.md  start.md
examples/: download_song.py  get_all_sheets.py  phone_login.py  private_message.py  qrcode_login.py  upload_file.py
qqmusic_api/: __init__.py
qqmusic_api/algorithms/: __init__.py  sign.py  tripledes.py
qqmusic_api/core/: __init__.py  client.py  exceptions.py  pagination.py  request.py  versioning.py
qqmusic_api/models/: _validator.py  album.py  base.py  comment.py  helper.py  login.py  lyric.py  mv.py  private_message.py  recommend.py  request.py  search.py  singer.py  song.py  songlist.py  top.py  user.py
qqmusic_api/modules/: __init__.py  _base.py  album.py  comment.py  helper.py  helper_utils.py  login.py  login_utils.py  lyric.py  mv.py  private_message.py  recommend.py  search.py  singer.py  song.py  songlist.py  top.py  user.py
qqmusic_api/utils/: __init__.py  common.py  device.py  mqtt.py  qimei.py  retry.py
scripts/: ag-1.py
tests/: conftest.py  test_album.py  test_comment.py  test_login.py  test_login_utils.py  test_lyric.py  test_mv.py  test_private_message.py  test_recommend.py  test_search.py  test_singer.py  test_song.py  test_songlist.py  test_top.py  test_user.py
tests/core/: test_exceptions.py  test_request.py  test_versioning.py
tests/modules/: test_album.py  test_comment.py  test_login.py  test_lyric.py  test_mv.py  test_recommend.py  test_songlist.py  test_top.py
tests/modules/search/: test_search.py
tests/modules/singer/: test_singer.py
tests/modules/song/: test_song.py
tests/modules/user/: test_user.py
tests/support/: assertions.py  factories.py  fixtures.py
tests/utils/: test_algorithms.py  test_device.py  test_mqtt.py  test_qimei.py
web/: Dockerfile  README.md  config.example.toml  docker-compose.example.yml  requirements.txt  run.py
web/src/: app.py
web/src/core/: auth.py  cache.py  config.py  credential_store.py  response.py  security.py
web/src/modules/: __init__.py  comment.py  login.py  mv.py  singer.py  song.py  songlist.py
web/src/routes/: _helpers.py  comment.py  login.py  lyric.py  mv.py  recommend.py  search.py  singer.py  song.py  songlist.py  user.py
web/src/routing/: adapter_registry.py  docstrings.py  executor.py  params.py  route_types.py  router_factory.py
web/tests/: conftest.py  test_web_core.py  test_web_docstrings.py  test_web_enums.py  test_web_routes.py
