[project]
name = "qqmusic-api-python"
description = "QQ音乐API封装库"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
maintainers = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
keywords = ["api", "music", "qqmusic", "tencentmusic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AnyIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "anyio>=4.12.1",
  "cryptography>=46.0.3",
  "httpx[http2]>=0.27.0",
  "orjson>=3.10.15",
  "paho-mqtt>=2.1.0",
  "pydantic>=2.0.0",
  "tarsio>=0.5.1",
  "typing-extensions>=4.12.2",
]
dynamic = ["version"]

[project.urls]
documentation = "https://l-1124.github.io/QQMusicApi/"
homepage = "https://l-1124.github.io/QQMusicApi/"
repository = "https://github.com/l-1124/QQMusicApi"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "linting" },
  { include-group = "testing" },
  "tarsio[cli]>=0.5.1",
  "terminal-qrcode>=1.1.0",
]
docs = [
  "markdown-callouts>=0.4.0",
  "mkdocs-material>=9.7.5",
  "mkdocstrings>=1.0.3",
  "mkdocstrings-python>=2.0.3",
  "zensical>=0.0.27",
]
linting = [
    "prek>=0.3.5",
    "pyrefly>=0.56.0",
    "ruff>=0.15.6",
]
testing = ["pytest>=9.0.2", "pytest-sugar>=1.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_gitmoji"

[tool.hatch.build.targets.wheel]
packages = ["qqmusic_api"]

[tool.hatch.version]
path = "qqmusic_api/__init__.py"

[tool.pyrefly]
project-includes = ["qqmusic_api", "tests", "examples"]

[tool.pytest]
addopts = ["-rxXs"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["docs"]

[tool.ruff.lint]
extend-select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "FBT",
  "FURB",
  "I",
  "PERF",
  "PIE",
  "PT",
  "Q",
  "RET",
  "RUF",
  "SIM",
  "TC",
  "TID",
  "TRY",
  "UP",
]
ignore = [
  "TRY003",
  "BLE001",
  "TRY300",
  "TRY301",
  "TID252",
  "C901",
]
pydocstyle = { convention = "google" }

[tool.uv]
package = true
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
