[project]
name = "qqmusic-api-python"
description = "QQ音乐API封装库"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
maintainers = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" },
]
keywords = ["api", "music", "qqmusic", "tencentmusic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AnyIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: Chinese (Simplified)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "anyio>=4.12.1",
  "cryptography>=47.0.0",
  "jsonpath-ng>=1.8.0",
  "niquests[speedups]>=3.18.7",
  "orjson>=3.10.15",
  "paho-mqtt>=2.1.0",
  "pydantic>=2.13.3",
  "tarsio>=0.5.1",
  "typing-extensions>=4.12.2",
]
dynamic = ["version"]

[project.urls]
documentation = "https://l-1124.github.io/QQMusicApi/"
homepage = "https://l-1124.github.io/QQMusicApi/"
repository = "https://github.com/l-1124/QQMusicApi"

[project.optional-dependencies]
upload = [
    "cos-python-sdk-v5>=1.9.44",
]

[dependency-groups]
dev = [
  "tarsio[cli]>=0.5.1",
  "terminal-qrcode>=1.1.0",
  { include-group = "docs" },
  { include-group = "linting" },
  { include-group = "testing" },
  { include-group = "helper" },
]
docs = [
  "docstring-inheritance>=3.0.0",
  "griffe-inherited-docstrings>=1.1.3",
  "griffe-pydantic>=1.3.1",
  "mkdocstrings>=1.0.3",
  "mkdocstrings-python>=2.0.3",
  "zensical>=0.0.30",
]
helper = [
    "cos-python-sdk-v5>=1.9.44",
]
linting = [
  "prek>=0.3.5",
  "pyrefly>=0.56.0",
  "ruff>=0.15.6",
]
testing = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-sugar>=1.1.1",
]
web = [
  "fastapi>=0.136.1",
  "griffe>=2.0.2",
  "pydantic-settings[toml]>=2.14.0",
  "loguru>=0.7.3",
  "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_gitmoji"

[tool.hatch.build.targets.wheel]
packages = ["qqmusic_api"]

[tool.hatch.version]
path = "qqmusic_api/__init__.py"

[tool.pyrefly]
python-version = "3.10"

[tool.pyright]
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest]
addopts = ["-rxXs"]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
extend-exclude = ["docs"]

[tool.ruff.lint]
extend-select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "FBT",
  "FURB",
  "I",
  "PERF",
  "PIE",
  "PT",
  "Q",
  "RET",
  "RUF",
  "SIM",
  "TC",
  "TID",
  "TRY",
  "UP",
]
ignore = ["TRY003", "BLE001", "TRY300", "TRY301", "TID252", "C901", "COM81"]
extend-per-file-ignores = { "qqmusic_api/core/exceptions.py" = ["D107"] }
pydocstyle = { convention = "google" }

[tool.uv]
package = true
default-groups = ["dev"]
